// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a title and description are provided should render correctly 1`] = `
<div>
  <SideEffect(Head)>
    <title>
      my title
    </title>
    <meta
      content="my description"
      name="description"
    />
  </SideEffect(Head)>
  <Connect(Header) />
  <div
    className="header__margin-top"
  >
    <p>
      hello
    </p>
  </div>
  <Footer />
</div>
`;

exports[`not title and description are provided should render correctly 1`] = `
<div>
  <Connect(Header) />
  <div
    className="header__margin-top"
  >
    <p>
      hello
    </p>
  </div>
  <Footer />
</div>
`;
